--- a/style/style.css
+++ b/style/style.css
@@ -95,6 +95,14 @@
     cursor: pointer;
 }
 
+.social-icons a {
+    text-decoration: none;
+}
+
+.social-icons-nav a {
+    text-decoration: none;
+}
+
 .text-center {
     background-color: #172C54;
     height: 80px;
@@ -831,6 +839,7 @@
             text-align: center;
             margin-top: 115px;
         }
+
         .location-heading {
             margin-left: 40px;
             margin-top: 40px;
@@ -860,6 +869,11 @@
         }
         .form-inline {
             margin-bottom: 50px;
+        }
+        .contact-awards {
+            margin-top: 50px;
+            margin-left: 170px;
+            margin-bottom: 30px;
         }
 
     }
