--- a/style/style.css
+++ b/style/style.css
@@ -300,12 +300,18 @@ span {
 }
 
 .services-p-top {
-    margin-bottom: 8px;
+    margin: 8px;
 }
 
 .services-h2 {
     text-align: center;
     margin-top: 35px;
+}
+
+.services-images {
+    width: 100;
+    height: auto;
+    display: table;
 }
 
 .list-group {
@@ -573,18 +579,17 @@ span {
     .form-inline {
         text-align: center;
     }
-    .services-p-top {
-        margin: 30px 20px 30px 20px;
-    }
-    .services-p {
-        margin-bottom: 50px;
-    }
+
     .services-h2 {
         text-align: center;
-        margin-top: 45px;
     }
+    .services-p-top {
+        margin-bottom: 25px;
+    }
+
     .location-heading {
         margin-top: 30px;
+        margin-left: 20px;
     }
     .location-image {
         margin-left: 4px;
@@ -600,6 +605,9 @@ span {
         width: 220px;
         margin-left: -5px;
         margin-right: 30px;
+    }
+    .contact-p {
+        margin-left: 20px;
     }
 }
 
@@ -796,9 +804,7 @@ span {
         margin-left: 40px;
     }
 
-    .imgage-in-mystory-page {
-        margin: 20px;
-    }
+    .imgage-in-mystory-page {}
     .blog-p {
         font-size: 14px;
         margin-bottom: 40px;
@@ -814,19 +820,22 @@ span {
     .container-fluid-blog {
         padding: 0;
     }
-    .services-p-top {
-        margin: 50px 70px;
-    }
-    .services-p {
-        margin-bottom: 50px;
-    }
+
     .services-h2 {
         text-align: center;
-        margin-top: 115px;
+    }
+    .services-images {
+        width: 100;
+        height: auto;
+        display: inline-table;
+    }
+    .services-p-top {
+        margin-bottom: 45px;
     }
 
     .location-heading {
         margin-top: 40px;
+        margin-left: 20px;
     }
     .location-image {
         margin-top: 20px;
@@ -845,6 +854,9 @@ span {
     }
     .form-inline {
         margin-bottom: 50px;
+    }
+    .contact-p {
+        margin-left: 20px;
     }
     .contact-awards {
         margin-top: 50px;
