--- a/style/style.css
+++ b/style/style.css
@@ -687,8 +687,8 @@ span {
     }
     .portfolio-p {
         text-align: left;
-        margin: 25px 57px;
         padding: 0;
+        margin-bottom: 60px;
     }
 
 
